Fix product index item titles overlapping price by reducing font-size

--- a/app/assets/stylesheets/pages/_products_index.scss
+++ b/app/assets/stylesheets/pages/_products_index.scss
@@ -71,6 +71,7 @@
   color: $grey-4;
   letter-spacing: $letter-spacing-1;
   font: $text-font-stack;
+  font-size: 14px;
 }
 
 .listings--product-price {
